# hybrid_search_with_qdrant

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: get_dataset.py
